--- a/memories.html
+++ b/memories.html
@@ -10,57 +10,63 @@
 <body>
     <div class="titre">BLACK JACK</div>
 
-    <h1>Jeu de Memory</h1>
-  <div class="memory-game">
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="card_valet.png" alt="A">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-    </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Joker_vert.webp" alt="B">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-      </div>
-      <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Joker.webp" alt="C">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-    </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="MaitreDesCartes.webp" alt="D">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-      </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Stone_Joker.webp" alt="E">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-    </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Vampire.webp" alt="F">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-      </div>
-      <div class="memory-game">
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="card_valet.png" alt="A">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-    </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Joker_vert.webp" alt="B">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-      </div>
-      <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Joker.webp" alt="C">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-    </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="MaitreDesCartes.webp" alt="D">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-      </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Stone_Joker.webp" alt="E">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-    </div>
-    <div class="memory-card" data-framework="a">
-      <img class="front-face" src="Vampire.webp" alt="F">
-      <img class="back-face" src="card_dos.webp" alt="Dos">
-      </div>
+   <h1>Jeu de Memory</h1>
+<div class="memory-game">
+  <div class="memory-card" data-framework="a">
+    <img class="front-face" src="card_valet.png" alt="A">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+  <div class="memory-card" data-framework="a">
+    <img class="front-face" src="card_valet.png" alt="A">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+
+  <div class="memory-card" data-framework="b">
+    <img class="front-face" src="Joker_vert.webp" alt="B">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+  <div class="memory-card" data-framework="b">
+    <img class="front-face" src="Joker_vert.webp" alt="B">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+
+  <div class="memory-card" data-framework="c">
+    <img class="front-face" src="Joker.webp" alt="C">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+  <div class="memory-card" data-framework="c">
+    <img class="front-face" src="Joker.webp" alt="C">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+
+  <div class="memory-card" data-framework="d">
+    <img class="front-face" src="MaitreDesCartes.webp" alt="D">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+  <div class="memory-card" data-framework="d">
+    <img class="front-face" src="MaitreDesCartes.webp" alt="D">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+
+  <div class="memory-card" data-framework="e">
+    <img class="front-face" src="Stone_Joker.webp" alt="E">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+  <div class="memory-card" data-framework="e">
+    <img class="front-face" src="Stone_Joker.webp" alt="E">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+
+  <div class="memory-card" data-framework="f">
+    <img class="front-face" src="Vampire.webp" alt="F">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+  <div class="memory-card" data-framework="f">
+    <img class="front-face" src="Vampire.webp" alt="F">
+    <img class="back-face" src="card_dos.webp" alt="Dos">
+  </div>
+</div>
+
 
 
  <script src="memories.js"></script>
