--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="jeton_casino.ico">
     <title>BLACK JACK</title>
 </head>
 <body>
-    
+   <div class="header">
     <div class="titre">BLACK JACK</div>
+    <p>Bienvenue sur Black Jack.</p>
+    <p>Votre nouveau casino préféré.</p>
+    <p>Mais allez vous survivre à cette nuit de frivolités ?</p>
+  </div>
 
-<p>Bienvenue sur Black Jack.</p>
-<p>Votre nouveau casino préféré.</p>
-<p>Mais allez vous survivre à cette nuit de frivolités ?</p>
+  <div class="container">
+    <a href="memories.html" class="styled">Commencer</a>
+  </div>
 
-<a href="memories.html" class="styled">Commencer</a>
 </body>
 </html>
 
