add and update files

--- a/memories.html
+++ b/memories.html
@@ -70,6 +70,12 @@
 <div>Erreurs : <span id="erreurs">0</span></div>
 
 
+    <button id="next-button" style="display: none;" onclick="window.location.href='findtheace.html'">
+    Continuer
+    </button>
+    
+
+
  <script src="memories.js"></script>
     
    
