--- a/findtheace.html
+++ b/findtheace.html
@@ -10,26 +10,29 @@
 </head>
 <body>
 
- <div class="titre">FIND THE ACE JACK</div>
+ <div class="titre">FIND THE ACE</div>
  <div class="main">
-    <div class="game-container">
-   
+  <div class="game-container">
+    
     <div class="memory-card" data-card="ace">
       <div class="front"></div>
       <div class="back"></div>
     </div>
-
     <div class="memory-card" data-card="joker">
       <div class="front"></div>
       <div class="back"></div>
     </div>
-
     <div class="memory-card" data-card="joker">
       <div class="front"></div>
       <div class="back"></div>
     </div>
   </div>
 </div>
+
+<div class="button-container">
+  <a href="roulette.html" id="continueBtn">Continuer</a>
+</div>
+
 <script src="findtheace.js"></script>
 </body>
 </html>
